cluster/homelab/apps/koffan/gateway-api.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: koffan-external
spec:
  parentRefs:
    - name: external
      namespace: istio-gateway
  hostnames:
    - "koffan.sgenov.dev"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: web
          port: 80
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: koffan-internal
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/description: Shopping List
    gethomepage.dev/group: Personal
    gethomepage.dev/icon: https://koffan.sgenov.dev/favicon.ico
    gethomepage.dev/name: Koffan
spec:
  parentRefs:
    - name: internal
      namespace: istio-gateway
  hostnames:
    - "koffan.sgenov.dev"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: koffan
          port: 80
